# osc-summit-counter

./: .gitignore  .gitreview  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
summit_counter/: main.py  ptg.py
