[metadata]
name = openstack-summit-counter
summary = OSC Plugin to help compute the number of summits someone has attended.
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = https://pypi.python.org/pypi/openstack-summit-counter
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    summit_counter

[entry_points]
openstack.cli =
    summit count = summit_counter.main:SummitCount
    summit list = summit_counter.main:SummitList
    ptg count = summit_counter.ptg:PtgCount
    ptg list = summit_counter.ptg:PtgList

[wheel]
universal = 1
